--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 JWT_SECRET_KEY = 'tedfhjnHhjjjndGjjdj348HJJJ55994'
+APP_SETTINGS='app.config.DevelopmentConfig'
+DATABASE_URL='postgresql://andyphied:Ericphilips5@localhost/tutdb'
+SECRET_KEY='A1dEvpY'
